# pgmon

./: .codespellrc  .gitignore  .justfile  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  mise.toml  pgload.py  pgmon.yaml
.devcontainer/: README.md  compose.podman.yaml  compose.yaml  configure-git.sh  devcontainer.json  devcontainer.portable.json  init-db.sql  post-start.sh  postcreate.sh
.github/workflows/: build.yml  coverage.yml  release.yml  test.yml
scripts/: dev-ssh  dev-up  install-postgres-client.sh
src/: config.rs  main.rs  themes.rs
src/cli/: actions.rs  dispatch.rs  mod.rs  start.rs  telemetry.rs
src/cli/commands/: mod.rs
src/pg/: client.rs  conninfo.rs  mod.rs  queries.rs
src/pg/client/: activity.rs  connect.rs  error.rs  metadata.rs  replication.rs  runtime.rs  statements.rs  types.rs
src/pg/client/explain/: execute.rs  mod.rs  parse.rs  regression.rs  tests.rs
src/tui/: app.rs  ui.rs
src/tui/app/: fetch.rs  format.rs  mod.rs  state.rs  tests.rs  ui_state.rs
src/tui/ui/: activity.rs  common.rs  mod.rs  modals.rs  replication.rs  table.rs
